# mm_rs_with_catlass

./: .gitignore  .gitmodules  CMakeLists.txt  OWNERS  README.md  a2a_mm_rs_prompt.xt  ag_mm_a2a_prompt.xt  quantized_matmul_reduce_scatter_design.md
examples/: CMakeLists.txt
examples/00_matmul_allreduce/: CMakeLists.txt  matmul_allreduce.cpp
examples/00_matmul_allreduce/scripts/: build.sh  run.sh
examples/01_allgather_matmul/: CMakeLists.txt  allgather_matmul.cpp
examples/01_allgather_matmul/scripts/: build.sh  run.sh  test_shapes.csv
examples/02_matmul_reduce_scatter/: CMakeLists.txt  issue.txt  matmul_reduce_scatter.cpp  quant_matmul_reduce_scatter.cpp
examples/02_matmul_reduce_scatter/scripts/: build.sh  gen_quant_data.py  run.sh  run_quant.sh  run_quant_rank0.sh  run_quant_rank1.sh  set_env.sh  test_quant_shapes.csv  test_shapes.csv
examples/allgather/: CMakeLists.txt  README.md  allgather_kernel.cpp  build.sh  main.cpp  run.sh
examples/allgather_matmul/: CMakeLists.txt  main.cpp
examples/allgather_matmul/scripts/: run.sh
examples/allgather_matmul_dequant/: CMakeLists.txt  README.md  allgather_matmul.cpp  gen_data.py  main.cpp  utils.h  utils.py  verify_result.py
examples/allgather_matmul_dequant/scripts/: build.sh  run.sh  test_shapes.csv
examples/allgather_matmul_with_gather_result/: CMakeLists.txt  main.cpp
examples/allgather_matmul_with_gather_result/scripts/: run.sh
examples/alltoall_matmul_reduce_scatter/: README.md  gen_data.py  main.cp
examples/alltoall_matmul_reduce_scatter/scripts/: run.sh
examples/collective_allgather/: CMakeLists.txt  data_statistic.py  main.cpp  run.sh
examples/dynamic_tiling/: CMakeLists.txt  README.md  build_and_run.sh  dynamic_tiling.cpp  main.cpp
examples/dynamic_tiling/impl/: CMakeLists.txt  kernel_bf16.cpp  kernel_fp16.cpp
examples/dynamic_tiling/impl/kernel/: allgather_matmul.h  allgather_matmul_with_gather_result.h  matmul_allreduce.h  matmul_reduce_scatter.h
examples/dynamic_tiling/include/: info.h  launch_map.h  tiling.h  utils.h
examples/dynamic_tiling/scripts/: run.sh  test_shapes.csv
examples/dynamic_tiling/tiling/: coc_tiling_lut.cpp
examples/dynamic_tiling/utils/: get_best_res.py  process_data.py
examples/fusion_matmul_allreduce/: CMakeLists.txt  main.cpp
examples/fusion_matmul_allreduce/kernel/: matmul_epilogue_comm.hpp
examples/fusion_matmul_allreduce/scripts/: build.sh  run.sh
examples/fusion_matmul_allreduce/utils/: gen_data.py  utils.h  verify_result.py
examples/helloworld/: CMakeLists.txt  README.md  build.sh  demo.cpp
examples/matmul_allreduce/: README.md  build.sh  build_run.sh  main.cpp  run.sh
examples/matmul_allreduce/kernel/: matmul_epilogue_comm.hpp
examples/matmul_allreduce/scripts/: build.sh  run.sh
examples/matmul_allreduce/utils/: gen_data.py  utils.h  verify_result.py
examples/matmul_reduce_scatter/: CMakeLists.txt  main.cpp
examples/matmul_reduce_scatter/scripts/: run.sh
examples/matmul_reduce_scatter_dequant/: CMakeLists.txt  README.md  main.cpp
examples/matmul_reduce_scatter_dequant/scripts/: run.sh  set_env.sh  test_shapes.csv
examples/matmul_reduce_scatter_dequant/utils/: gen_quant_data.py
examples/matmul_reduce_scatter_quant_perchn/: CMakeLists.txt  README.md  main.cpp
examples/matmul_reduce_scatter_quant_perchn/scripts/: run.sh  test_shapes.csv
examples/quant_matmul_reduce_scatter/: CMakeLists.txt  README.md  main.cpp
examples/quant_matmul_reduce_scatter/scripts/: run.sh  set_env.sh
examples/templates/docs/: quickstart.md
examples/templates/include/catcoc/: catcoc.hpp  (+1 more)
examples/utils/: gen_data.py  gen_data_quant_perchn.py  gen_quant_data.py  utils.h  utils.py  verify_quant_result.py  verify_result.py
src/: CMakeLists.txt
src/device/: CMakeLists.txt  memset.cpp  shmem_barrier.cpp  shmemi_barrier.cpp  shmemi_device_intf.h  shmemi_memset.cpp
src/device/comm/: scalar_p.cpp
src/device/sync/: shmem_barrier.cpp
src/host/: CMakeLists.txt  shmem_heap.cpp  shmem_init.cpp  shmem_rma.cpp  shmem_team.cpp  shmemi_host_common.h  shmemi_mspace.cpp  shmemi_mspace.h
src/host/common/: shmemi_functions.h  shmemi_host_common.h  shmemi_logger.h  shmemi_version.h
src/host/domain/: team.cpp
src/host/init/: init.cpp  shmem_init.cpp  shmemi_init.h
src/host/mem/: mem.cpp  mspace.cpp  shmem_heap.cpp  shmem_mm.cpp  shmem_rma.cpp  shmemi_mm.h  shmemi_mm_heap.cpp  shmemi_mm_heap.h
src/host/python_wrapper/: CMakeLists.txt  pyshmem.cpp
src/host/sync/: shmemi_sync.cpp  shmemi_sync.h
src/host/team/: shmem_team.cpp  shmemi_team.h  team.cpp
src/include/: shmemi_host_def.h  shmemi_host_intf.h
src/python/: setup.py  test.py
src/python/aclshmem/: __init__.py
src/python/shmem/: __init__.py
tests/: CMakeLists.txt  team_example.cpp  test_scalar_get_put.cpp
tests/examples/: README.md  config.py  np_normal_generator.py  np_uniform_generator.py  utils.py
tests/examples/fusion_matmul_allreduce/: test_fusion_matmul_allreduce.py
tests/examples/matmul_allreduce/: conftest.py  helper.py  test_matmul_allreduce.py
tests/test_barrier/: CMakeLists.txt  test_barrier_host.cpp  test_barrier_kernel.cpp
tests/test_mem/: test_mem_host.cpp  test_mem_kernel.cpp  test_scalar_p_host.cpp  test_scalar_p_kernel.cpp
tests/test_scalar_p/: test_scalar_p_host.cpp  test_scalar_p_kernel.cpp
tests/test_team/: team_example.cpp  test_team_host.cpp  test_team_kernel.cpp
tests/unittest/: CMakeLists.txt  main_test.cpp
tests/unittest/init/: init_host_test.cpp  init_test.cpp
tests/unittest/mem/: mem_host_test.cpp  mem_kernel.cpp  scalar_p_host_test.cpp  scalar_p_kernel.cpp  shmem_host_heap_test.cpp  ub_mem_host_test.cpp  ub_mem_kernel.cpp  ub_non_contiguous_host_test.cpp  ub_non_contiguous_kernel.cpp
tests/unittest/sync/: barrier_host_test.cpp  barrier_kernel.cpp  quiet_host_test.cpp  sync_host_test.cpp  sync_kernel.cpp  test_barrier_host.cpp  test_barrier_kernel.cpp
tests/unittest/team/: team_allgather_kernel.cpp  team_allgather_test.cpp  team_host_test.cpp  team_kernel.cpp
tests/unittest/test_barrier/: barrier_host_test.cpp  barrier_kernel.cpp
(+148 files in other folders)
